--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_calendar_carousel: ^2.4.2
+  flutter_dotenv: ^5.0.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,7 @@ dev_dependencies:
 flutter:
   assets:
   - assets/images/
+  - .env
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
