--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_maps_flutter: ^2.2.6
   location: ^4.4.0
   flutter_svg: ^2.0.5
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
