--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   location: ^4.4.0
   flutter_svg: ^2.0.5
   flutter_spinkit: ^5.2.0
+  geocoding: ^2.1.0
+  firebase_core: ^2.13.1
+  firebase_storage: ^11.2.2
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
